--- a/src/CSS/Navbar.css
+++ b/src/CSS/Navbar.css
@@ -98,6 +98,7 @@
         margin-right: 0;
     }
     .navbar {
+        overflow: hidden;
         gap: 1rem;
         padding: 1rem 0.75rem;
     }
