--- a/src/CSS/Navbar.css
+++ b/src/CSS/Navbar.css
@@ -92,7 +92,7 @@
 
 @media (max-width: 800px) {
     .navbar-search {
-        width: 100%;
+        flex-grow: 1;
     }
     .navbar > * {
         margin-right: 0;
